added performance tests and updates to config env for plaid